# learn-python

./: .gitignore  README.md  __init__.py  pyproject.toml
Codewars/: DNA_strand.py  alternating_split.py  digital_root.py  filter_list.py  find_even_index.py  find_outlier.py  get_pins.py  is_pangram.py  longest_slide_down.py  pig_it.py  spin_words.py  test.py
Codewars/Tests/: test_pig_it.py  test_top_3_word.py
Hexlet/: posgre
Hexlet/OOP/lessons/: class_LimitedCounter.py  class_counter2.py  supress.py
Hexlet/basic/: is_palindrome.py  is_power_of_three.py  rotate_tuple.py
Hexlet/data_abstraction/lessons/: calculate_distance.py  make_segments.py
Hexlet/data_abstraction/quests/: te_url.py
Hexlet/dictionary/lessons/: all_unique.py  count_all.py  flags.py  make_user.py
Hexlet/dictionary/quests/: build_query_string.py  find_where.py  to_arabic.py  to_rna.py  to_roman.py
Hexlet/tests/: test.py
Tests/: test_1.py
codewars/: expanded_form.py  to_camel_case.py  top_3_words.py
hexlet/: fizz_buzz.py
hexlet/basic/: Hexlet2.py  diff_ang.py  segments.py
hexlet/temp/: hexlet_ya1.py  temp.py
learn_python/codewars/: array_diff.py  dbl_linear.py  duplicate_count.py  find_it.py  is_interesting.py  last_digit.py  narcissistic.py  pig_it.py  sudoku_solver.py  unique_in_order.py
learn_python/other/: breadth_first.py  decorator_as_class_method.py  depth_first_search.py  fib_drweb.py  fizz_buzz.py  hexlet_ya1.py  prime_numbers.py  temp.py
other/: hexlet_1.py  prime_numbers.py
pytest/: tests.py
tests/: test_pig_it.py  test_top_3_word.py
(+61 files in other folders)
