[tool.poetry]
name = "learn_python"
version = "0.1.0"
description = ""
authors = ["PavliukKonstantin <Pavliuk.Konstantin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.2"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
